--- a/_data/projects.json
+++ b/_data/projects.json
@@ -368,7 +368,7 @@
       "date": "11/2003 - 11/2004",
       "tech": "Java, Blender 3D",
       "starred": "true",
-      "link": "",
+      "link": "http://jasonlanderson.org/adventure-game",
       "images": ["myst_game_1.jpg", "myst_game_2.jpg", "myst_game_3.jpg"]
     },
     {
